--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,19 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Mapping Dynamic Media Ecosystems: A Case Study of the Right to be Forgotten"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/2017-10-28-talk-1
+venue: "Digital Intermediaries and Media Pluralism"
+date: 2017-10-28
+location: "University of Dubrovnik, Croatia"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+See presentation materials [here](https://prezi.com/hntegzscwoui/?token=124430c3df339e881482a8dfd74e68bc101d23cefdce7f6ab8db18cdeca498a6).
+
+<br/><img src='/images/press-frame-histogram'>
+
+In this talk, I shared early stage findings from my doctoral research at an international conference. I proposed taking into account issues of information overflow and dynamism for traditional conceptualizations of pluralism via a case study. Using concepts such as the ‘networked public sphere’ (Benkler, 2006) and related methods (Benkler et al., 2013) for guidance, I mapped out actors, frames, and connections surrounding a single topic of coverage. This topic of coverage is one that deeply concerns the role of digital intermediaries and the free flow of information online. Questions I explored within the context of this case study included: 
+Who is engaging in discussion? What is most visible to the discussion, in terms of both frames and actors? What are some
+possible reasons why?
+
+
