Updates to Talks

--- a/_talks/2017-10-28-talk-1.md
+++ b/_talks/2017-10-28-talk-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Mapping Dynamic Media Ecosystems: A Case Study of the Right to be Forgotten"
+title: "Conference Proceedings: Mapping Dynamic Media Ecosystems around News Topics"
 collection: talks
 type: "Talk"
 permalink: /talks/2017-10-28-talk-1
