--- a/_talks/2017-10-28-talk-1.md
+++ b/_talks/2017-10-28-talk-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Conference Proceedings: Mapping Dynamic Media Ecosystems around News Topics"
 collection: talks
-type: "Talk"
+type: "Conference Presentation"
 permalink: /talks/2017-10-28-talk-1
 venue: "Digital Intermediaries and Media Pluralism"
 date: 2017-10-28
@@ -10,9 +10,7 @@ location: "University of Dubrovnik, Croatia"
 
 <img src='/images/press-frame-histogram.png'>
 
-In this talk, I shared early stage findings from my doctoral research at an international conference. I proposed using methods that prioritize understanding media topicdynamism over time. The histogram above is an example of the results from this approach; it shows how online coverge of a privacy issue changed (both in framing and visibility)depending on different events over two years.
-
-<br>
+In this talk, I shared early stage findings from my doctoral research at an international conference. I proposed using methods that prioritize understanding media topicdynamism over time. The histogram above is an example of the results from this approach; it shows how online coverge of a privacy issue changed (both in framing and visibility) depending on different events over two years.
 
 Using concepts such as the ‘networked public sphere’ (Benkler, 2006) and related methods (Benkler et al., 2013) for guidance, I mapped out actors, frames, and connections surrounding a single topic of coverage. This topic of coverage is one that deeply concerns the role of digital intermediaries and the free flow of information online. Questions I explored within the context of this case study included: 
 1. Who is engaging in discussion? 
