--- a/_talks/2020-02-09-talk-6.md
+++ b/_talks/2020-02-09-talk-6.md
@@ -1,8 +1,8 @@
 ---
-title: "UPCOMING February 2021: Media and Culture - Visibility"
+title: "UPCOMING February 9, 2021: Media and Culture - Visibility"
 collection: talks
 type: "Seminar"
-permalink: /talks/2021-02-09-talk-6
+permalink: /talks/2020-02-09-talk-6
 venue: "Data into Theory, University of Cambridge
 date: 2020-02-09
 location: "Cambridge, United Kingdom"
