--- a/_talks/2023-05-25-talk-8.md
+++ b/_talks/2023-05-25-talk-8.md
@@ -1,12 +1,11 @@
 ---
-title: "Connecting the global fact-checking field and technological development: A technographic case study of the InVID/WeVerify plugin"
+title: "Personal Data and Platform Power from 2014 - 2023: The Right to Be Forgotten"
 collection: talks
-type: "Conference Presentation"
+type: "Seminar Presentation"
 permalink: /talks/2023-05-25-talk-8
-venue: "ICA Pre-Conference: Global Fact-Checking Research"
+venue: "Community Hour Series - Berkman Klein Center for Internet & Society"
 date: 2023-05-25
-location: "Center for Social Innovation, Toronto, CA"
+location: "Harvard Law School"
 ---
 
-Presentation of findngs from SCAM project research around the INVID plugin, tracing technological and social development over time of a key fact checking technology.
-
+Presentation of developing book project about the Right to be Forgotten as a precedent-setting definitional controversy in the 2010s, giving insight into contemporary platform power.
