Projects/papers update

--- a/_publications/2015-08-07-paper-pds.md
+++ b/_publications/2015-08-07-paper-pds.md
@@ -5,7 +5,7 @@ permalink: /publication/2015-08-07-paper-pds
 excerpt: 'DG Connect commissioned this research and ensuing report to evaluate whether the concept of personal data stores is a viable mechanism to increase consumer trust and engagement in the Digital Single Market and to ensure wider access to good quality personal data.'
 date: 2015-08-07
 venue: 'European Commission, DG Connect'
-paperurl: 'https://ec.europa.eu/digital-single-market/en/news/study-personal-data-stores-conducted-cambridge-university-judge-business-school'
+paperurl: ''
 citation: 'Brochot, Brunini, Eisma, Larsen, and Lewis. (2015). &quot;Study of Personal Data Stores.&quot; <i>European Commission, DG Connect</i>.'
 ---
 
