Cambridge paper updated

--- a/_publications/2015-08-07-paper-pds.md
+++ b/_publications/2015-08-07-paper-pds.md
@@ -15,5 +15,5 @@ The report finds that this user-centric model could offer individuals more conve
 
 It considers that personal data stores may play an important role in unlocking the overall value of personal data applications, whose value-creation potential (summing the overall expected economic benefits to organisations and to consumers) is estimated at close to 1 trillion euro annually by 2020. According to the report, the potential market size for providers of personal data spaces in the EU could be up to 91.9 billion euro."
 
-[Download paper here](https://ec.europa.eu/digital-single-market/en/news/study-personal-data-stores-conducted-cambridge-university-judge-business-school)
+[Download paper here](/files/Cambridge_paper_2015.pdf)
 
