--- a/_talks/2023-11-01-talk-9.md
+++ b/_talks/2023-11-01-talk-9.md
@@ -1,12 +1,13 @@
 ---
-title: "Connecting the global fact-checking field and technological development: A technographic case study of the InVID/WeVerify plugin"
+title: "Personal Data and Platform Power from 2014 - 2024: The Right to Be Forgotten”"
 collection: talks
 type: "Conference Presentation"
-permalink: /talks/2023-05-25-talk-8
-venue: "ICA Pre-Conference: Global Fact-Checking Research"
-date: 2023-05-25
-location: "Center for Social Innovation, Toronto, CA"
+permalink: /talks/2023-11-01-talk-9
+venue: "Berkman Klein Center - Community Seminar Series"
+date: 2023-11-01
+location: "Harvard Law School"
 ---
 
-Presentation of findngs from SCAM project research around the INVID plugin, tracing technological and social development over time of a key fact checking technology.
-
+Overview of nascent book project. Questions addressed included:
+-  What have we learned about 'big tech', exportation/importation of legal frameworks, and continued colonial exploitation of parts of the Global Majority? How can studying things like 'meaning making' help reveal mechanisms/actors at work in this space?
+- How can/should academics write about things like technology and media when there's a sense that they are changing so quickly? How can we productively avoid and/or harness hope/hype cycles?
