--- a/_talks/2024-11-1-talk-11.md
+++ b/_talks/2024-11-1-talk-11.md
@@ -1,13 +1,10 @@
 ---
-title: "Personal Data and Platform Power from 2014 - 2024: The Right to Be Forgotten"
+title: "Digitization and Polarization in Local Context: Contemporary Rural Talk Radio Stations in the US"
 collection: talks
 type: "Conference Presentation"
-permalink: /talks/2023-11-01-talk-9
-venue: "Berkman Klein Center - Community Seminar Series"
-date: 2023-11-01
-location: "Harvard Law School"
+permalink: /talks/2024-11-01-talk-11
+venue: "Association of Internet Researchers (AoIR)"
+date: 2024-11-01
+location: "Sheffield University, UK"
 ---
 
-Overview of nascent book project. Questions addressed included:
--  What have we learned about 'big tech', exportation/importation of legal frameworks, and continued colonial exploitation of parts of the Global Majority? How can studying things like 'meaning making' help reveal mechanisms/actors at work in this space?
-- How can/should academics write about things like technology and media when there's a sense that they are changing so quickly? How can we productively avoid and/or harness hope/hype cycles?
