--- a/_talks/2024-09-24-talk-10.md
+++ b/_talks/2024-09-24-talk-10.md
@@ -1,5 +1,5 @@
 ---
-title: "PTechnology and Politics in Local Context: Rural Talk Radio in the US"
+title: "Technology and Politics in Local Context: Rural Talk Radio in the US"
 collection: talks
 type: "Invited Speaker"
 permalink: /talks/2024-09-26-talk-10
