--- a/_talks/2025-02-21-talk-12.md
+++ b/_talks/2025-02-21-talk-12.md
@@ -5,7 +5,7 @@ type: "Invited Talk"
 permalink: /talks/2025-02-21-talk-12
 venue: "Culture & Computation Lab"
 date: 2025-02-21
-location: "Univerity of Luxembourg"
+location: "University of Luxembourg"
 ---
 [Invited talk at the CuCo Lab, University of Luxembourg](https://cucolab.uni.lu/blog/conversations-15-local-airwaves-national-impact/). 
 
